services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-http
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-https
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
