route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: http
spec:
  to:
    kind: Service
    name: nginx-http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
    destinationCACertificate: ''
  port:
    targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: https
spec:
  to:
    kind: Service
    name: nginx-https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: None
    destinationCACertificate: ''
  port:
    targetPort: 8443
